Add responsive-design #2

--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,6 +1,6 @@
 .btn {
   color: var(--white-color);
-  background-color: var(--red-color);
+  background-color: var(--secondary-color);
   border: none;
 }
 
