--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,7 +1,7 @@
 :root {
   --font-base: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  --blue-color: #31a9f3;
-  --red-color: #ea1e63;
+  --primary-color: #31a9f3;
+  --secondary-color: #ea1e63;
   --black-color: #030303;
   --white-color: #ffffff;
   --gray-color-light: #d2ccc9;
