--- a/css/components/form.css
+++ b/css/components/form.css
@@ -1,5 +1,22 @@
 .form-small {
+  width: 40rem;
+
   display: flex;
   flex-direction: column;
+  align-items: center;
   row-gap: 4rem;
+}
+
+.form-small input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--white-color);
+  padding: 1rem 0;
+  width: 100%;
+  color: var(--white-color);
+}
+
+.form-small input::placeholder {
+  color: var(--white-color);
 }
