--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,6 +1,11 @@
 /* base */
 @import '../base/base.css';
-@import '../base/layout.css';
+@import '../base/breakpoints.css';
+
+/* layouts */
+@import '../layouts/hero.css';
+@import '../layouts/about.css';
+@import '../layouts/footer.css';
 /* 3rd-party */
 
 /* components */
