--- a/css/components/form.css
+++ b/css/components/form.css
@@ -1,5 +1,6 @@
 .form-small {
   width: 40rem;
+  margin: 0 calc(50% - 20rem);
 
   display: flex;
   flex-direction: column;
@@ -19,4 +20,19 @@
 
 .form-small input::placeholder {
   color: var(--white-color);
+}
+
+@media screen and (max-width: 768px) {
+  .form-small {
+    width: 30rem;
+    margin: 0 calc(50% - 15rem);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-small {
+    width: 100%;
+    margin: 0;
+    padding: 0 4rem;
+  }
 }
