--- a/css/layouts/hero.css
+++ b/css/layouts/hero.css
@@ -4,18 +4,23 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  padding: 10rem 0 2rem;
+}
+
+.hero > .row-small {
   text-align: center;
-  padding: 10rem 0;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  row-gap: 3rem;
 }
 
 .hero__logo {
-  height: 5rem;
-  width: 5rem;
+  height: 6rem;
+  width: 100%;
+  object-fit: contain;
+
+  padding-bottom: 1rem;
 }
 .heading__title {
   font-size: 4.8rem;
@@ -23,4 +28,31 @@
 
 .heading__subheading {
   color: var(--gray-color-dark);
+}
+
+@media screen and (max-width: 768px) {
+  .heading__title {
+    font-size: 4rem;
+  }
+  .hero__logo {
+    padding-bottom: 0;
+  }
+  .heading__subheading {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .heading__title {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero {
+    padding: 4rem 0;
+  }
+  .heading__subheading {
+    padding: 0 2rem;
+  }
 }
