--- a/css/base/breakpoints.css
+++ b/css/base/breakpoints.css
@@ -19,10 +19,10 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .container > .row {
-    width: 60rem;
-    margin: 0 calc(50% - 30rem);
+    width: 50rem;
+    margin: 0 calc(50% - 25rem);
   }
 }
 
@@ -31,5 +31,14 @@
   .container > .row-small {
     width: 100%;
     margin: 0;
+  }
+  .container > .row {
+    padding: 0 6rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .container > .row {
+    padding: 0 4rem;
   }
 }
