--- a/css/components/button.css
+++ b/css/components/button.css
@@ -2,6 +2,8 @@
   color: var(--white-color);
   background-color: var(--secondary-color);
   border: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
 }
 
 .btn-submit {
