--- a/css/components/form.css
+++ b/css/components/form.css
@@ -1,3 +1,4 @@
+/* SMALL-FORM */
 .form-small {
   width: 40rem;
   margin: 0 calc(50% - 20rem);
@@ -34,5 +35,54 @@
     width: 100%;
     margin: 0;
     padding: 0 4rem;
+  }
+}
+
+/* NORMAL-FORM */
+.form {
+  text-align: right;
+}
+
+.form .form__inputs {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  margin-bottom: 3rem;
+}
+.form .form__inputs textarea {
+  grid-column: 1 / -1;
+  resize: vertical;
+}
+
+.form .form__inputs input,
+.form .form__inputs textarea {
+  color: var(--gray-color-dark);
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--gray-color-dark);
+}
+
+.form .form__inputs input::placeholder,
+.form .form__inputs textarea::placeholder {
+  color: var(--gray-color-dark);
+}
+
+@media screen and (max-width: 900px) {
+  .form {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .form .form__inputs {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+  .form .form__inputs textarea {
+    grid-column: 1 / -1;
+    resize: none;
   }
 }
