--- a/css/base/base.css
+++ b/css/base/base.css
@@ -4,7 +4,7 @@
   --secondary-color: #ea1e63;
   --black-color: #030303;
   --white-color: #ffffff;
-  --gray-color-light: #d2ccc9;
+  --gray-color-light: #c5e5fc;
   --gray-color-dark: #475159;
 }
 
@@ -30,7 +30,6 @@ body {
   font-size: 1.6rem; /* 16px or style elements individually */
   min-height: 100vh; /* body - takes the full screen */
 }
-
 /* Changing the style of selected text */
 ::selection {
   background-color: var(--red-color);
