--- a/css/layouts/footer.css
+++ b/css/layouts/footer.css
@@ -34,7 +34,9 @@
 }
 
 .footer .footer__copyright {
-  padding: 3rem 0;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -47,9 +49,6 @@
 }
 
 @media screen and (max-width: 600px) {
-  .footer .footer__copyright {
-    padding: 3rem;
-  }
   .footer .footer__logo {
     height: 3rem;
   }
