Add socials links and animation

--- a/css/base/base.css
+++ b/css/base/base.css
@@ -32,6 +32,6 @@ body {
 }
 /* Changing the style of selected text */
 ::selection {
-  background-color: var(--red-color);
-  color: var(--white-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
